--- a/generators/app/templates/ui5/webapp/manifest.json
+++ b/generators/app/templates/ui5/webapp/manifest.json
@@ -1,107 +1,101 @@
 {
-	"_version": "1.0.1",
-	"sap.app": {
-		"_version": "1.0.0",
-		"id": "<%= appName %>",
-		"type": "application",
-		"i18n": "i18n/i18n.properties",
-		"title": "{{MasterView.tittle}}",
-		"description": "{{appDescription}}",
-		"applicationVersion": {
-			"version": "1.0.0"
-		}
-	},
-	"sap.ui": {
-		"_version": "1.3.0",
-		"technology": "UI5",
-		"deviceTypes": {
-			"desktop": true,
-			"tablet": true,
-			"phone": true
-		},
-		"supportedThemes": [
-			"sap_bluecrystal",
-			"sap_belize_plus",
-			"sap_belize"
-		]
-	},
-	"sap.ui5": {
-	    "_version": "1.2.0",
-		"rootView": "<%= appName %>.view.App",
-		"dependencies": {
-			"minUI5Version": "1.34.0",
-			"libs": {
-				"sap.ui.core": {
-					"minVersion": "1.34.0"
-				},
-				"sap.m": {
-					"minVersion": "1.34.0"
-				},
-				"sap.ui.layout": {
-					"minVersion": "1.34.0"
-				}
-			}
+  "_version": "1.8.0",
+  "sap.app": {
+    "_version": "1.0.0",
+    "id": "<%= appName %>",
+    "type": "application",
+    "i18n": "i18n/i18n.properties",
+    "title": "{{App.Title}}",
+    "description": "{{App.Description}}",
+    "applicationVersion": {
+      "version": "1.0.0"
+    }
+  },
+  "sap.ui": {
+    "technology": "UI5",
+    "deviceTypes": {
+      "desktop": true,
+      "tablet": true,
+      "phone": true
+    },
+    "supportedThemes": ["sap_bluecrystal", "sap_belize_plus", "sap_belize"]
+  },
+  "sap.ui5": {
+    "rootView": "<%= appName %>.view.App",
+    "dependencies": {
+      "minUI5Version": "1.34.0",
+      "libs": {
+        "sap.ui.core": {
+          "minVersion": "1.34.0"
         },
-		"contentDensities": {
-			"compact": true,
-			"cozy": true
-		},
-		"models": {			
-															
-		    "i18n": {
-				"type": "sap.ui.model.resource.ResourceModel",
-				"settings": {
-					"bundleName": "<%= appName %>.i18n.i18n"
-				}
-			}
-		},
-		"routing": {
-			"config": {
-				"routerClass": "sap.m.routing.Router",
-				"viewType": "XML",
-				"viewPath": "<%= appName %>.view",				
-				"controlId": "app",
-				"controlAggregation": "pages",
-				"bypassed": {
-					"target": "notFound"
-				}
-			},
+        "sap.m": {
+          "minVersion": "1.34.0"
+        },
+        "sap.ui.layout": {
+          "minVersion": "1.34.0"
+        }
+      }
+    },
+    "contentDensities": {
+      "compact": true,
+      "cozy": true
+    },
+    "models": {
+      "i18n": {
+        "type": "sap.ui.model.resource.ResourceModel",
+        "settings": {
+          "bundleName": "<%= appName %>.i18n.i18n"
+        }
+      }
+    },
 
-			"routes": [
-				{
-					"pattern": "dashBoard",
-					"name": "dashBoard",
-					"target": "dashBoard"
-				},				
-				{
-					"pattern": "",
-					"name": "login",
-					"target": "login"
-				},		
-				{
-					"pattern": "settings/:userName:",
-					"name": "settings",
-					"target": "settings"
-				}						
-			],
+    "routing": {
+      "config": {
+        "routerClass": "sap.m.routing.Router",
+        "viewType": "XML",
+        "viewPath": "<%= appName %>.view",
+        "controlId": "app",
+        "controlAggregation": "pages",
+        "bypassed": {
+          "target": "notFound"
+        }
+      },
 
-			"targets": {
-				"dashBoard": {
-					"viewName": "Master",
-					"viewLevel": 2
-				},
-				
-				"login": {
-					"viewName": "Login",
-					"viewLevel": 1,
-					"viewPath": "<%= appName %>.view.security"					
-				},
-				"settings": {
-					"viewName": "Edit",
-					"viewLevel": 3,
-					"viewPath": "<%= appName %>.view.settings"					
-				}				
-			}
-		}
-	}
+      "routes": [
+        {
+          "pattern": "dashBoard",
+          "name": "dashBoard",
+          "target": "dashBoard"
+        },
+        {
+          "pattern": "",
+          "name": "login",
+          "target": "login"
+        },
+        {
+          "pattern": "settings/:userName:",
+          "name": "settings",
+          "target": "settings"
+        }
+      ],
+
+      "targets": {
+        "dashBoard": {
+          "viewName": "Master",
+          "viewLevel": 2
+        },
+
+        "login": {
+          "viewName": "Login",
+          "viewLevel": 1,
+          "viewPath": "<%= appName %>.view.security"
+        },
+        "settings": {
+          "viewName": "Edit",
+          "viewLevel": 3,
+          "viewPath": "<%= appName %>.view.settings"
+        }
+      }
+    }
+  }
 }
