--- a/generators/app/templates/ui5/webapp/manifest.json
+++ b/generators/app/templates/ui5/webapp/manifest.json
@@ -1,27 +1,38 @@
 {
-  "_version": "1.8.0",
+  "_version": "1.0.1",
   "sap.app": {
     "_version": "1.0.0",
     "id": "<%= appName %>",
     "type": "application",
     "i18n": "i18n/i18n.properties",
-    "title": "{{App.Title}}",
-    "description": "{{App.Description}}",
+    "title": "{{MasterView.tittle}}",
+    "description": "{{appDescription}}",
     "applicationVersion": {
       "version": "1.0.0"
     }
   },
   "sap.ui": {
+    "_version": "1.3.0",
     "technology": "UI5",
     "deviceTypes": {
       "desktop": true,
       "tablet": true,
       "phone": true
     },
-    "supportedThemes": ["sap_bluecrystal", "sap_belize_plus", "sap_belize"]
+    "supportedThemes": [
+      { "Id": "sap_belize", "Description": "Belize" },
+      { "Id": "sap_belize_plus", "Description": "Belize Plus" },
+      { "Id": "sap_bluecrystal", "Description": "Blue Crystal" },
+      { "Id": "sap_belize_hcb", "Description": "Alto Constraste Preto" },
+      { "Id": "sap_belize_hcw", "Description": "Alto Contraste Branco" }
+    ]
   },
   "sap.ui5": {
+    "_version": "1.2.0",
     "rootView": "<%= appName %>.view.App",
+    "config": {
+      "serviceUrl": "webapp/model/data"
+    },
     "dependencies": {
       "minUI5Version": "1.34.0",
       "libs": {
@@ -81,8 +92,9 @@
 
       "targets": {
         "dashBoard": {
-          "viewName": "Master",
-          "viewLevel": 2
+          "viewName": "DashBoard",
+          "viewLevel": 2,
+          "transition": "flip"
         },
 
         "login": {
@@ -93,9 +105,60 @@
         "settings": {
           "viewName": "Edit",
           "viewLevel": 3,
-          "viewPath": "<%= appName %>.view.settings"
+          "viewPath": "<%= appName %>.view.settings",
+          "transition": "flip"
         }
       }
     }
-  }
+  },
+
+  "name": "<%= appName %>",
+  "short_name": "<%= shortName %>",
+  "start_url": "index.html",
+  "display": "standalone",
+  "orientation": "portrait",
+  "icons": [
+    {
+      "src": "img/icons/icon-72x72.png",
+      "sizes": "72x72",
+      "type": "image/png"
+    },
+    {
+      "src": "img/icons/icon-96x96.png",
+      "sizes": "96x96",
+      "type": "image/png"
+    },
+    {
+      "src": "img/icons/icon-128x128.png",
+      "sizes": "128x128",
+      "type": "image/png"
+    },
+    {
+      "src": "img/icons/icon-144x144.png",
+      "sizes": "144x144",
+      "type": "image/png"
+    },
+    {
+      "src": "img/icons/icon-152x152.png",
+      "sizes": "152x152",
+      "type": "image/png"
+    },
+    {
+      "src": "img/icons/icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "img/icons/icon-384x384.png",
+      "sizes": "384x384",
+      "type": "image/png"
+    },
+    {
+      "src": "img/icons/icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ],
+  "background_color": "#576574",
+  "theme_color": "#4e8ef7"
 }
