--- a/generators/app/templates/angular/webapp/manifest.json
+++ b/generators/app/templates/angular/webapp/manifest.json
@@ -98,9 +98,9 @@
           "target": "exemplos"
         },
         {
-          "pattern": "user",
-          "name": "user",
-          "target": "user"
+          "pattern": "languages",
+          "name": "languages",
+          "target": "languages"
         }
       ],
 
@@ -134,10 +134,10 @@
           "viewLevel": 3,
           "viewPath": "<%= appName %>.src.app"
         },
-        "user": {
-          "viewName": "User",
+        "languages": {
+          "viewName": "Languages",
           "viewLevel": 3,
-          "viewPath": "<%= appName %>.src.pages.user"
+          "viewPath": "<%= appName %>.src.pages.languages"
         }
       }
     }
