--- a/generators/app/templates/app/package.json
+++ b/generators/app/templates/app/package.json
@@ -14,5 +14,8 @@
     "grunt-contrib-copy": "^1.0.0",
     "grunt-eslint": "^20.0.0",
     "grunt-openui5": "^0.12.0"
+  },
+  "dependencies": {
+    "html2pdf.js": "^0.9.1"
   }
 }
